--- a/front-end/pages/home/home.html
+++ b/front-end/pages/home/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <HTML>
 <head>
-<title>Caring Milf</title>
+<title>Caring Milf App</title>
 
 <!-- Icons -->
 <link href="../../src/icons/all.css" rel="stylesheet">
@@ -345,8 +345,6 @@
 				</div>
 			</div>
 		</div>
-	
-	
 	</div>
 </div>
 
